[package]
name = "mqtt-bell"
version = "0.1.0"
authors = ["Alexander Mohr <git@mohr.io>"]
edition = "2024"

[dependencies]
rumqttc = "0.24.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.26"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
